--- a/MemeMe/MemeMe/Base.lproj/Main.storyboard
+++ b/MemeMe/MemeMe/Base.lproj/Main.storyboard
@@ -56,7 +56,11 @@
                                         </connections>
                                     </barButtonItem>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="qRW-qw-r6M"/>
-                                    <barButtonItem systemItem="cancel" id="dq5-Ol-l1B"/>
+                                    <barButtonItem systemItem="cancel" id="dq5-Ol-l1B">
+                                        <connections>
+                                            <action selector="cancel:" destination="BYZ-38-t0r" id="a65-IM-yjA"/>
+                                        </connections>
+                                    </barButtonItem>
                                 </items>
                             </toolbar>
                         </subviews>
@@ -109,17 +113,17 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="rh8-fm-MQZ">
-                                <rect key="frame" x="200" y="200" width="200" height="200"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="200" id="EGV-MI-2ft"/>
-                                    <constraint firstAttribute="height" constant="200" id="iBH-xY-O53"/>
-                                </constraints>
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="rh8-fm-MQZ" firstAttribute="centerY" secondItem="RIG-75-dMc" secondAttribute="centerY" id="3LZ-Ak-MwM"/>
-                            <constraint firstItem="rh8-fm-MQZ" firstAttribute="centerX" secondItem="RIG-75-dMc" secondAttribute="centerX" id="hZL-FK-6uG"/>
+                            <constraint firstItem="rh8-fm-MQZ" firstAttribute="centerX" secondItem="RIG-75-dMc" secondAttribute="centerX" id="Ce2-ri-3zL"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="rh8-fm-MQZ" secondAttribute="trailing" constant="-20" id="G0T-Kr-48X"/>
+                            <constraint firstItem="ob8-U4-VfJ" firstAttribute="top" secondItem="rh8-fm-MQZ" secondAttribute="bottom" id="QoP-RF-Ph4"/>
+                            <constraint firstItem="rh8-fm-MQZ" firstAttribute="centerY" secondItem="RIG-75-dMc" secondAttribute="centerY" id="gvF-CF-rPh"/>
+                            <constraint firstItem="rh8-fm-MQZ" firstAttribute="leading" secondItem="RIG-75-dMc" secondAttribute="leadingMargin" constant="-20" id="i5m-Aa-dJ3"/>
+                            <constraint firstItem="rh8-fm-MQZ" firstAttribute="top" secondItem="RIG-75-dMc" secondAttribute="topMargin" id="vv0-wG-SaL"/>
                         </constraints>
                     </view>
                     <connections>
@@ -287,10 +291,10 @@
                                     <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="K8V-QS-og9">
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="K8V-QS-og9">
                                             <rect key="frame" x="5" y="5" width="90" height="90"/>
                                         </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="bottomLabel" textAlignment="center" lineBreakMode="middleTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="osn-aG-Ney">
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="middleTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="osn-aG-Ney">
                                             <rect key="frame" x="8" y="71" width="84" height="21"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="21" id="Cxu-s4-srL"/>
@@ -299,7 +303,7 @@
                                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="topLabel" textAlignment="center" lineBreakMode="middleTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="z4J-UE-CCz">
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="middleTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="z4J-UE-CCz">
                                             <rect key="frame" x="8" y="8" width="84" height="21"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="21" id="S3Y-uJ-sYW"/>
